refactor(接口测试): 优化本地附件csv的清理逻辑